// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transforms calls on global _ properties to modular requires 1`] = `
"const _lodash_map = require(\\"lodash/map\\");

const _lodash_identity = require(\\"lodash/identity\\");

const _lodash_isNumber = require(\\"lodash/isNumber\\");

_lodash_map([], x => x);
_lodash_map([], x => !!x);
_lodash_identity;
_lodash_isNumber(0);"
`;

exports[`Transforms methods in files with a monolithic require and removes monolithic require 1`] = `
"const _lodash_map = require('lodash/map');

const _lodash_identity = require('lodash/identity');

const _lodash_isNumber = require('lodash/isNumber');

_lodash_map([], x => x);
_lodash_map([], x => !!x);
_lodash_identity;
_lodash_isNumber(0);"
`;
